# ai-job-matching

./: .gitignore  Makefile  QUICKSTART.md  README.md  blog_post.md  cli.py  pyproject.toml  resume.md  resume.md.sample
agents/: __init__.py  cv_agent.py  job_agent.py  match_agent.py
core/: __init__.py  embeddings.py  logger.py  parsing_schemas.py  scoring.py  utils.py
tests/: test_core.py
workflows/: match_jobs.py  parse_jobs.py  parse_resume.py  run_all.py
